# RemoteDnn

./: CMakeLists.txt  README.txt  main.cpp  window.cpp  window.h  window.ui
RemoteClassifier/: CMakeLists.txt  classifyworkerthread.cpp  classifyworkerthread.h  imageinfo.cpp  imageinfo.h  remoteclassifier.cpp  remoteclassifier.h  remoteclassifierserver.cpp  remoteclassifierserver.h
RemoteClassifier/Classifier/: CMakeLists.txt  classifiedimageinfo.cpp  classifiedimageinfo.h  classifier.cpp  classifier.h  objectinfo.cpp  objectinfo.h
RemoteClassifier/DataTransfer/: CMakeLists.txt  dataclient.cpp  dataclient.h  dataserver.cpp  dataserver.h
